# electricity-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.prod.yaml  compose.yaml  dagster-values.yaml  dagster.yaml  docker-compose.prod.yaml  docker-compose.yml  entsoe.rest  pyproject.toml  queries.sql
.github/workflows/: build-push-image.yml  lint-test.yaml
dev/: queries.sql
pipeline/: definitions.py  resources.py
pipeline/assets/: prices.py
pipeline/assets/spot_prices/: __init__.py  common.py  db.py  parsed.py  raw.py
tests/: test_parsed.py  test_parsing.py
tests/fixtures/: api_res_mock.xml
