[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electricity-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-postgres",
    "requests",
    "sqlalchemy",
    "psycopg2-binary",
    "pandas",
    "python-dotenv",
    "tabulate",
]

[tool.dagster]
module_name = "pipeline.definitions"

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["pipeline"]

[tool.setuptools]
packages = ["pipeline"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty>=0.0.23",
]
