[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electricity-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-postgres",
    "requests",
    "sqlalchemy",
    "psycopg2-binary",
    "pandas",
    "python-dotenv",
    "tabulate",
    "dagster-dg-cli>=1.12.18",
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "click==8.1.8",
]

[tool.dagster]
module_name = "pipeline.definitions"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "pipeline"

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["pipeline"]

[tool.setuptools]
packages = ["pipeline"]

[dependency-groups]
dev = [
    "dagster-dg>=0.2.2",
    "pytest",
    "ruff",
    "ty>=0.0.23",
]
